local-k8s/manual/applications/01_api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: disecomm-apps
spec:
  replicas: 1
  selector: # pods that this deployment will manage
    matchLabels:
      app: api-gateway
  template:
    metadata:
      name: api-gateway # the name of the pod itself
      labels: # labels of the pods, this must match the selector above
        app: api-gateway
      annotations:
        instrumentation.opentelemetry.io/inject-java: "java-instrumentation"
    spec:
      containers:
        - name: app # name of the container inside the pod
          image: myregistry.localhost:5001/disecomm-api-gateway:local
          imagePullPolicy: Always # always pull the image from the registry
          ports:
            - containerPort: 5102 # the port the container listens on
              name: http # the name of the port
          resources:
            limits:
              memory: "512Mi"
              cpu: "2000m" # means 500 millicores, or 0.5 cores
            requests:
              memory: "512Mi"
              cpu: "500m" # means 500 millicores, or 0.5 cores

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  namespace: disecomm-apps
spec:
  selector: # the pods that this service will route traffic to
    # selector must match the labels of the pods, it uses include all the labels
    app: api-gateway
  ports:
    - protocol: TCP # the protocol that the service should use, the default is TCP
      port: 8080 # the port the clients will connect to
      targetPort: 8080  # the port the pods are listening on, must match the containerPort
      name: http # the name of the port
  type: ClusterIP
