local-k8s/manual/applications/01_inventory-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-management
  namespace: disecomm-apps
spec:
  selector: # pods that this deployment will manage
    matchLabels:
      app: inventory-management
  template:
    metadata:
      name: inventory-management # the name of the pod itself
      labels: # labels of the pods, this must match the selector above
        app: inventory-management
    spec:
      containers:
        - name: app # name of the container inside the pod
          image: myregistry.localhost:5001/disecomm-inventory-management:local
          imagePullPolicy: Always # always pull the image from the registry
          ports:
            - containerPort: 8080 # the port the container listens on
              name: http # the name of the port
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-management-svc
  namespace: disecomm-apps
spec:
  selector: # the pods that this service will route traffic to
    # selector must match the labels of the pods, it uses include all the labels
    app: inventory-management
  ports:
    - protocol: TCP # the protocol that the service should use, the default is TCP
      port: 8080 # the port the clients will connect to
      targetPort: 8080  # the port the pods are listening on, must match the containerPort
      name: http # the name of the port
  type: ClusterIP
