local-k8s/manual/applications/01_order-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management
  namespace: disecomm-apps
spec:
  selector: # pods that this deployment will manage
    matchLabels:
      app: order-management
  template:
    metadata:
      name: order-management # the name of the pod itself
      labels: # labels of the pods, this must match the selector above
        app: order-management
    spec:
      containers:
        - name: app # name of the container inside the pod
          image: myregistry.localhost:5001/disecomm-order-management:local
          imagePullPolicy: Always # always pull the image from the registry
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 5102
              name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: order-management-svc
  namespace: disecomm-apps
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  selector: # the pods that this service will route traffic to
    # selector must match the labels of the pods, it uses include all the labels
    app: order-management
  ports:
    - port: 8080
      name: http
    - port: 5102
      name: grpc
  type: ClusterIP
