local-k8s/manual/applications/01_product-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  namespace: disecomm-apps
spec:
  replicas: 1
  selector: # pods that this deployment will manage
    matchLabels:
      app: product-catalog
  template:
    metadata:
      name: product-catalog # the name of the pod itself
      labels: # labels of the pods, this must match the selector above
        app: product-catalog
    spec:
      containers:
        - name: app # name of the container inside the pod
          image: myregistry.localhost:5001/disecomm-product-catalog:local
          imagePullPolicy: Always # always pull the image from the registry
          ports:
            - containerPort: 5102 # the port the container listens on
              name: grpc # the name of the port
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m" # means 500 millicores, or 0.5 cores
            requests:
              memory: "512Mi"
              cpu: "500m" # means 100 millicores, or 0.1 cores
---
apiVersion: v1
kind: Service
metadata:
  name: product-catalog-svc
  namespace: disecomm-apps
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  selector: # the pods that this service will route traffic to
    # selector must match the labels of the pods, it uses include all the labels
    app: product-catalog
  ports:
    - protocol: TCP # the protocol that the service should use, the default is TCP
      port: 5102 # the port the clients will connect to
      targetPort: 5102  # the port the pods are listening on, must match the containerPort
      name: grpc # the name of the port
  type: ClusterIP
